# kerkour.com

./: .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  LICENSE.txt  Makefile  README.md  bloom.json  codacy-analysis.yml  config.toml  design.md  firebase.json  go.mod  go.sum  mail.yml  main.go  netlify.toml  schedule.md  serverless.yaml
.devcontainer/: Dockerfile  bashrc  devcontainer.json  devcontaner.json  vimrc
.firebase/: hosting.ZGlzdA.cache
.github/: FUNDING.yml
.github/workflows/: anchore-analysis.yml  checkmarx-analysis.yml  ci.yml  codeql-analysis.yml  crunch42-analysis.yml  devskim-analysis.yml  fortify-analysis.yml  kubesec-analysis.yml  prisma-analysis.yml  publish.yml  rust.yml  semgrep-analysis.yml  shiftleft-analysis.yml  snyk-container-analysis.yml  snyk-infrastructure-analysis.yml  stackhawk-analysis.yml  synopsys-io-analysis.yml  sysdig-scan-analysis.yml  trivy-analysis.yml  veracode-analysis.yml
2021/benchmarking_symmetric_encryption_in_rust/: Cargo.toml  README.md
2021/deploy_rust_on_heroku/: Cargo.toml  Dockerfile  ci.yml
2021/go_http_long_polling/: chat.go
2021/rust_fast_port_scanner/: README.md
2021/rust_file_encryption/: .gitignore  Cargo.toml  README.md
2021/rust_large_cargo_workspace/: Cargo.toml
2021/rust_long_polling/: Cargo.toml  README.md
2021/rust_on_esp32/: README.md
2021/rust_postgresql_job_queue/: Cargo.toml  README.md
2021/rust_postgresql_job_queue/migrations/: 0000_init.sql
2021/rust_postgresql_job_queue/src/: main.rs  postgres.rs  queue.rs
2021/rust_reproductible_cross_compilation/: Dockerfile.windows  README.md
2021/rust_shellcode/: Makefile  README.md  shellcode.asm
2021/rust_sort_vector/: Cargo.toml
2021/rust_static_site_generator/: Cargo.toml  README.md
2021/rust_static_site_generator/content/: hello-world.md
2021/rust_static_site_generator/public/: hello-world.html  index.html
2021/rust_static_site_generator/src/: main.rs  templates.rs
2021/rust_static_site_generator/src/templates/: body.rs  footer.rs  header.rs  mod.rs
2021/rust_string_to_int_and_int_to_string/: README.md
2021/rust_worker_pool/: Cargo.toml
2021/rust_worker_pool/src/: main.rs
2022/: hello  hello.rs
2022/2021_03_16_how_to_send_emails_in_rust/: Cargo.toml
2022/deploy_rust_on_heroku/: README.md
2022/end_to_end_encryption_domain_separation/: README.md
2022/go_http_long_polling/: go.sum
2022/postgresql_insert_performance/: Cargo.toml  README.md
2022/postgresql_insert_performance/go/: db.go  go.mod  go.sum  insert.go  main.go
2022/postgresql_insert_performance/rust/: Cargo.toml
2022/postgresql_insert_performance/rust/src/: db.rs  main.rs
2022/postgresql_insert_performance/src/: lib.rs  main.rs
2022/rust_axum_hostname_router/: Cargo.toml  README.md
2022/rust_file_encryption/: Cargo.toml
2022/rust_file_encryption_with_password/: Cargo.toml  README.md
2022/rust_file_encryption_with_password/src/: main.rs
2022/rust_key_exchange/: Cargo.toml  README.md
2022/rust_large_cargo_workspace/: README.md
2022/rust_shellcode/: .gitignore  shellcode.ld
2022/rust_sort_vector/: README.md
2022/rust_static_site_generator/: README.md
2022/rust_string_to_int_and_int_to_string/: Cargo.toml
2022/rust_web_application/: Cargo.toml
2022/rust_web_s3/: Cargo.toml
_hugo/content/: about.md
_hugo/static/: CNAME
_old/: about copy.md  photos.md
_old/layouts/: 404.html
assets/js/: cash-0.7.1.min.js  index.js
assets/sass/: _base.scss  _layout.scss  const.scss  main.scss  style.scss  theme.scss
black-hat-rust-private/: .dockerignore  .gitignore  Makefile  feedback.md  pirate.md  support_version.md
black-hat-rust-private/code_old/: .gitignore
black-hat-rust-private/ebooks/: black_hat_rust.mobi
black-hat-rust-private/resources/: Dockerfile  Makefile  README_old.md  README_old2.md  contents.md  ideas.md  inline_code.md  marketing.md  notes.md  quotes.md  resources.md
black-hat-rust-private/src/: ch_01.md  ch_02.md  ch_03.md  ch_04.md  ch_05.md  ch_06.md  ch_07.md  ch_08.md  ch_09.md  ch_10.md  ch_11.md  ch_12.md  ch_13.md  ch_14.md  contact.md  copyright.md  cover.tex  early_access_bonuses.md  pirate.md  preface.md
blog/2013/: 2013_12_27_introduction_au_reverse_engineering_android.md
blog/2021/2021_03_16_how_to_send_emails_in_rust/: Cargo.toml  README.md
blog/2021/2021_03_16_how_to_send_emails_in_rust/src/: main.rs
blog/2021/2021_04_06_rust_minimal_docker_image/myip/: Cargo.toml  Dockerfile.distroless  Dockerfile.scratch  README.md
blog/2021/benchmarking_symmetric_encryption_in_rust/: Cargo.toml  README.md
blog/2021/benchmarking_symmetric_encryption_in_rust/benches/: crypto.rs
blog/2021/high_performance_rust_with_sqlite/: Cargo.toml  README.md
blog/2021/high_performance_rust_with_sqlite/src/: main.rs
blog/2021/rust_fast_port_scanner/: Cargo.toml
blog/2021/rust_fast_port_scanner/src/: main.rs
blog/2021/rust_long_polling/: Cargo.toml  README.md
blog/2021/rust_long_polling/src/: db.rs  error.rs
blog/2021/rust_on_esp32/: Cargo.toml
blog/2021/rust_on_esp32/src/: main.rs
blog/2022/end_to_end_encryption_domain_separation/: Cargo.toml
blog/2022/rust_file_encryption_with_password/: .gitignore  Cargo.toml
books/: README.md
content/: _index.md  about.md  blog.md  confirm.md  music.md  photos.md  projects.md  readings.md  subscribe.md  the-infinite-game-and-the-just-cause.md  unsubscribe.md
layouts/: 404.html  index.html
newsletter/: 2021_02_10.md  2021_02_24.md  2021_03_18.md  2021_04_08.md  2021_07_29.md  2021_08_04.md  2021_08_18.md
old/: Makefile  config.toml
pages/: books.md  contact.md  courses.md  hacking_stories.md  home.md  manifesto.md  privacy.md  readings.md  subscribe.md  terms.md
public/: robots.txt  waybackverify.txt
sass/: _base.scss  _layout.scss  fonts.scss  main.scss
snippets/: bhr_banner.html  hacking_stories_disclaimer.html  mailchimp.html  subscribe_form.html
static/: 404.html  CNAME  publickey.txt  robots.txt
templates/: anchor-link.html  index.html  page.html
wiki/: .gitignore  Makefile  mkdocs.yml
zola/: .gitignore  config.toml
(+1125 files in other folders)
