[package]
name = "postgresql_insert_performance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "any", "postgres", "uuid", "chrono", "json"] }
anyhow = "1"
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
futures = "0.3"
