[package]
name = "rust_file_encryption_with_password"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { version = "0.4", features = ["std", "stream"] }
anyhow = "1.0"
chacha20poly1305 = "0.9"
rand = "0.8"
rpassword = "5.0"
rust-argon2 = "1.0"
zeroize = "1.4"
