[package]
name = "rust_file_encryption_with_password"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
anyhow = "1.0"
rand = "0.8"
zeroize = "1.4"
rust-argon2 = "1.0"
rpassword = "5.0"
